--- a/src/app/retrospective/retrospective-list/retrospective-list.component.html
+++ b/src/app/retrospective/retrospective-list/retrospective-list.component.html
@@ -1,40 +1,29 @@
 <div class="row">
   <div class="col">
-    What could be improved
+    <label class="improvement">What could be improved</label>
     <div class="card w-75">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        
       </div>
     </div>
   </div>
   <div class="col">
-    Neutral
+    <label class="neutral">Neutral</label>
     <div class="card w-75">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        
       </div>
     </div>
   </div>
   <div class="col">
-    What went well
+    <label class="well">What went well</label>
     <div class="card w-75">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        
       </div>
     </div>
   </div>
 </div>
-
-<!-- <div class="card w-75">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    
-  </div>
-</div> -->
