--- a/src/app/retrospective/retrospective-list/retrospective-list.component.html
+++ b/src/app/retrospective/retrospective-list/retrospective-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col">
     <label class="improvement">What could be improved</label>
-    <div class="card w-75">
+    <div class="card w-100 bd-callout bd-callout-danger">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -10,7 +10,7 @@
   </div>
   <div class="col">
     <label class="neutral">Neutral</label>
-    <div class="card w-75">
+    <div class="card w-100 bd-callout bd-callout-warning">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -19,7 +19,7 @@
   </div>
   <div class="col">
     <label class="well">What went well</label>
-    <div class="card w-75">
+    <div class="card w-100 bd-callout bd-callout-info">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
