--- a/src/app/retrospective/retrospective.component.html
+++ b/src/app/retrospective/retrospective.component.html
@@ -23,11 +23,30 @@
                 <form>
                     <div class="form-group">
                         <label for="recipient-name" class="col-form-label">Type:</label>
-                        <select class="form-control">
-                            <option>What could be improved</option>
-                            <option>Neutral</option>
-                            <option>What went well</option>
-                        </select>
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm">
+                                    <div class="workout-type">
+                                        <div 
+                                            class="workout-type__pane active">
+                                            <i class="fa fa-thumbs-down"></i>
+                                            <p>To Improve</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-sm">
+                                    <div class="workout-type">
+                                        <div 
+                                            class="workout-type__pane active">
+                                            <i class="fa fa-thumbs-up"></i>
+                                            <p>Went Well</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="form-group">
                         <label for="message-text" class="col-form-label">Message:</label>
