--- a/src/app/retrospective/retrospective.component.html
+++ b/src/app/retrospective/retrospective.component.html
@@ -1,7 +1,7 @@
 <div class="pt-5">
     <div class="pb-5">
-        <button type="button" class="btn btn-outline-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">Create
-        New Card</button>
+        <button type="button" class="btn btn-outline-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">Create New Card</button>
+        <button type="button" class="btn btn-outline-primary float-right mr-3">Filter</button>
     </div>
     <div class="pt-5">
         <app-retrospective-list></app-retrospective-list>
@@ -29,8 +29,8 @@
                                 <div class="col-sm">
                                     <div class="workout-type">
                                         <div 
-                                            class="workout-type__pane active">
-                                            <i class="fa fa-thumbs-down"></i>
+                                            class="workout-type__pane">
+                                            <i class="fa fa-thumbs-down mr-2"></i>
                                             <p>To Improve</p>
                                         </div>
                                     </div>
@@ -39,7 +39,7 @@
                                     <div class="workout-type">
                                         <div 
                                             class="workout-type__pane active">
-                                            <i class="fa fa-thumbs-up"></i>
+                                            <i class="fa fa-thumbs-up mr-2"></i>
                                             <p>Went Well</p>
                                         </div>
                                     </div>
