--- a/src/app/retrospective/retrospective-list/retrospective-list.component.html
+++ b/src/app/retrospective/retrospective-list/retrospective-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col">
-    <label class="improvement">What could be improved</label>
+  <div class="col-sm">
+    <label class="improvement mb-4">What could be improved</label>
     <div class="card w-100 bd-callout bd-callout-danger">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -8,8 +8,8 @@
       </div>
     </div>
   </div>
-  <div class="col">
-    <label class="neutral">Neutral</label>
+  <div class="col-sm">
+    <label class="neutral mb-4">Neutral</label>
     <div class="card w-100 bd-callout bd-callout-warning">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -17,8 +17,8 @@
       </div>
     </div>
   </div>
-  <div class="col">
-    <label class="well">What went well</label>
+  <div class="col-sm">
+    <label class="well mb-4">What went well</label>
     <div class="card w-100 bd-callout bd-callout-info">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
