--- a/src/app/retrospective/retrospective-list/retrospective-list.component.scss
+++ b/src/app/retrospective/retrospective-list/retrospective-list.component.scss
@@ -1,13 +1,19 @@
 .improvement {
     color: #fd397a;
+    font-weight: 500;
+    width: 100%;
 }
 
 .neutral {
     color: #ffb822;
+    font-weight: 500;
+    width: 100%;
 }
 
 .well {
-    color: #1dc9b7;
+    color: #5bc0de;
+    font-weight: 500;
+    width: 100%;
 }
 
 .bd-callout {
