--- a/src/app/retrospective/retrospective.component.html
+++ b/src/app/retrospective/retrospective.component.html
@@ -12,52 +12,48 @@
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalCenterTitle">Create New Card</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Type:</label>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalCenterTitle">Create New Card</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form [formGroup]="cardFormGroup">
+                        <div class="form-group">
+                            <label for="recipient-name" class="col-form-label">Type:</label>
 
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-sm">
-                                    <div class="workout-type">
-                                        <div 
-                                            class="workout-type__pane">
-                                            <i class="fa fa-thumbs-down mr-2"></i>
-                                            <p>To Improve</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-sm">
-                                    <div class="workout-type">
-                                        <div 
-                                            class="workout-type__pane active">
-                                            <i class="fa fa-thumbs-up mr-2"></i>
-                                            <p>Went Well</p>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm" *ngFor="let selector of selectors">
+                                        <div class="workout-type">
+                                            <div 
+                                                class="workout-type__pane"
+                                                [class.active]="selector === value"
+                                                (click)="setSelected(selector)">
+                                                <i class="fa mr-2"
+                                                    [ngClass]="{'fa-thumbs-down': selector === 'To Improve', 'fa-thumbs-up': selector === 'Went Well'}"></i>
+                                                <p>{{ selector }}</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                    </div>
-                    <div class="form-group">
-                        <label for="message-text" class="col-form-label">Message:</label>
-                        <textarea class="form-control" id="message-text"></textarea>
-                    </div>
-                </form>
+                        <div class="form-group">
+                            <label for="message-text" class="col-form-label">Message:</label>
+                            <textarea 
+                                class="form-control" 
+                                id="message-text"
+                                formControlName="message"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" (click)="saveCard()">Save</button>
+                </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
     </div>
 </div>
