--- a/src/app/retrospective/retrospective.component.html
+++ b/src/app/retrospective/retrospective.component.html
@@ -4,7 +4,7 @@
         <button type="button" class="btn btn-outline-primary float-right mr-3">Filter</button>
     </div>
     <div class="pt-5">
-        <app-retrospective-list></app-retrospective-list>
+        <app-retrospective-list [model]="model"></app-retrospective-list>
     </div>
 </div>
 
@@ -42,6 +42,13 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <label for="message-text" class="col-form-label">Title:</label>
+                            <input 
+                                class="form-control" 
+                                id="title-text"
+                                formControlName="title" />
+                        </div>
+                        <div class="form-group">
                             <label for="message-text" class="col-form-label">Message:</label>
                             <textarea 
                                 class="form-control" 
@@ -51,7 +58,7 @@
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Close</button>
                     <button type="button" class="btn btn-primary" (click)="saveCard()">Save</button>
                 </div>
             </div>
