--- a/src/app/retrospective/retrospective.component.scss
+++ b/src/app/retrospective/retrospective.component.scss
@@ -16,7 +16,7 @@
         background: darken(#f5f9fd, 3%);
       }
       &.active {
-        background: darken(#f5f9fd, 3%);
+        background: darken(#d4edda, 3%);
         img, p, i {
           opacity: 1;
         }
