--- a/src/app/retrospective/retrospective.component.html
+++ b/src/app/retrospective/retrospective.component.html
@@ -1,6 +1,6 @@
 <div class="pt-5">
     <div class="pb-5">
-        <button type="button" class="btn btn-outline-primary float-right" data-toggle="modal" data-target="#exampleModalCenter">Create New Card</button>
+        <button type="button" class="btn btn-outline-primary float-right" data-toggle="modal" data-target="#retrospectiveModal">Create New Card</button>
         <button type="button" class="btn btn-outline-primary float-right mr-3">Filter</button>
     </div>
     <div class="pt-5">
@@ -9,12 +9,12 @@
 </div>
 
 <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+<div class="modal fade" #retrospectiveModal id="retrospectiveModal" tabindex="-1" role="dialog" aria-labelledby="retrospectiveModalTitle"
     aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalCenterTitle">Create New Card</h5>
+                    <h5 class="modal-title" id="retrospectiveModalTitle">Create New Card</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -30,10 +30,10 @@
                                         <div class="workout-type">
                                             <div 
                                                 class="workout-type__pane"
-                                                [class.active]="selector === value"
+                                                [class.active]="selector === cardFormGroup.controls.type.value"
                                                 (click)="setSelected(selector)">
                                                 <i class="fa mr-2"
-                                                    [ngClass]="{'fa-thumbs-down': selector === 'To Improve', 'fa-thumbs-up': selector === 'Went Well'}"></i>
+                                                    [ngClass]="{'fa-thumbs-down': selector === 'To Improve', 'fa-thumbs-up': selector === 'Went Well', 'fa-bolt': selector === 'Actions'}"></i>
                                                 <p>{{ selector }}</p>
                                             </div>
                                         </div>
@@ -44,22 +44,34 @@
                         <div class="form-group">
                             <label for="message-text" class="col-form-label">Title:</label>
                             <input 
+                                [ngClass]="{'is-valid': cardFormGroup.controls.title.valid, 
+                                'is-invalid': !cardFormGroup.controls.title.valid && cardFormGroup.controls.title.touched }"
                                 class="form-control" 
                                 id="title-text"
-                                formControlName="title" />
+                                formControlName="title"
+                                maxlength="20" required />
+                                <small id="passwordHelpBlock" class="form-text text-muted">
+                                    {{ this.cardFormGroup.controls.title.value.length }} of 20
+                                </small>
                         </div>
                         <div class="form-group">
                             <label for="message-text" class="col-form-label">Message:</label>
                             <textarea 
+                                [ngClass]="{'is-valid': cardFormGroup.controls.message.valid, 
+                                'is-invalid': !cardFormGroup.controls.message.valid && cardFormGroup.controls.message.touched }"
                                 class="form-control" 
                                 id="message-text"
-                                formControlName="message"></textarea>
+                                formControlName="message"
+                                maxlength="280" required></textarea>
+                                <small id="passwordHelpBlock" class="form-text text-muted">
+                                    {{ this.cardFormGroup.controls.message.value.length }} of 280
+                                </small>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Close</button>
-                    <button type="button" class="btn btn-primary" (click)="saveCard()">Save</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" (click)="saveCard()" [disabled]="!cardFormGroup.valid">Save</button>
                 </div>
             </div>
     </div>
