--- a/src/app/retrospective/retrospective-list/retrospective-list.component.html
+++ b/src/app/retrospective/retrospective-list/retrospective-list.component.html
@@ -7,6 +7,10 @@
           <h5 class="card-title">{{ item.title }}</h5>
           <p class="card-text">{{ item.message }}</p>
         </div>
+        <div class="card-footer bg-transparent">
+          <small class="text-muted">Last updated 3 mins ago</small>
+          <a (click)="editCard(item)" class="card-link float-right">Edit</a>
+        </div>
       </div>
     </div>
   </div>
@@ -18,6 +22,10 @@
           <h5 class="card-title">{{ item.title }}</h5>
           <p class="card-text">{{ item.message }}</p>
         </div>
+        <div class="card-footer bg-transparent">
+          <small class="text-muted">Last updated 3 mins ago</small>
+          <a (click)="editCard(item)" class="card-link float-right">Edit</a>
+        </div>
       </div>
     </div>
   </div>
@@ -28,6 +36,10 @@
         <div class="card-body">
           <h5 class="card-title">{{ item.title }}</h5>
           <p class="card-text">{{ item.message }}</p>
+        </div>
+        <div class="card-footer bg-transparent">
+          <small class="text-muted">Last updated 3 mins ago</small>
+          <a (click)="editCard(item)" class="card-link float-right">Edit</a>
         </div>
       </div>
     </div>
