--- a/src/app/retrospective/retrospective-list/retrospective-list.component.scss
+++ b/src/app/retrospective/retrospective-list/retrospective-list.component.scss
@@ -40,3 +40,9 @@
 .card-footer {
     border-top: 0;
 }
+
+.card-link {
+    color: #007bff !important;
+    text-decoration: none !important;
+    background-color: transparent !important;
+}
